tests/tables/fails/parser/unexpected_tokens.tbl
# error: unexpected_tokens.tbl(2,11), Expected '=', got: @
# table foo @ = []
#           ^
table foo @ = []

